--- a/AmpV2_LCD/AmpV2_LCD.ini
+++ b/AmpV2_LCD/AmpV2_LCD.ini
@@ -5,5 +5,5 @@ LCD_Y=320
 LCD_INTERFACE=I2C
 PROJECT_NAME=AmpV2_LCD
 LCD_DIR=Horizontal
-DEFAULT_DIR_PATH=C:\Users\mrf\Documents\Random Projects\Amp V2\Actual project files\AmpV2_LCD
-DEFAULT_OUTPUT_DIR_PATH=C:\Users\mrf\Documents\Random Projects\Amp V2\Actual project files\AmpV2_LCD\output
+DEFAULT_DIR_PATH=C:\Users\mrf\Documents\Random Projects\Amp V2\Actual project files\Amp-V2\AmpV2_LCD
+DEFAULT_OUTPUT_DIR_PATH=C:\Users\mrf\Documents\Random Projects\Amp V2\Actual project files\Amp-V2\AmpV2_LCD\output
