--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = teensy
 board = teensy40
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
+lib_deps = https://github.com/pedvide/ADC.git
